Add more examples of br and comments in html

--- a/html-1/lectures/p-paragraph.html
+++ b/html-1/lectures/p-paragraph.html
@@ -8,7 +8,7 @@
         This is the first paragraph of text. This is the first paragraph of text. This
         is the first paragraph of text. This is the first paragraph of text.
     </p>
-    <p>
+    <p title="second paragraph">
         This is the second paragraph. This is the second paragraph. This is the second
         paragraph. This is the second paragraph.
     </p>
