--- a/html-1/lecture/img-image-embeded.html
+++ b/html-1/lecture/img-image-embeded.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>My favourite cat</h1>
-    <img src="https://i.imgur.com/HNFxj9y.jpg" alt="a famous Vietnamese cat on Tiktok">
+    <img src="https://images2.imgbox.com/21/c4/7tn5e8lO_o.jpg" alt="a famous Vietnamese cat on Tiktok">
 </body>
 </html>
      
