add some updates from the live code session from the lecture

--- a/html-1/lecture/img-image-embeded.html
+++ b/html-1/lecture/img-image-embeded.html
@@ -7,7 +7,7 @@
 <body>
 
     <h1>My favourite cat</h1>
-    <img src="https://images2.imgbox.com/21/c4/7tn5e8lO_o.jpg" alt="a famous Vietnamese cat image on Tiktok">
+    <img src="https://images2.imgbox.com/21/c4/7tn5e8lO_o.jpg" width="200px" alt="a famous Vietnamese cat image on Tiktok">
 
 
 </body>
