--- a/html-2/lecture/audio.html
+++ b/html-2/lecture/audio.html
@@ -4,7 +4,7 @@
     <title>Example of audio element</title>
 </head>
 <body>
-    <img src="assets/images/kitten.jpg" width="150" alt="a cute kitten"><br>
+    <img src="assets/image/kitten.jpg" width="150" alt="a cute kitten"><br>
     <audio src="assets/audio/meow.mp3" controls>Your browser does not support the audio tag</audio><br>
     <audio src="assets/audio/purr.mp3" controls>Your browser does not support the audio tag</audio><br>
     <audio src="assets/audio/Lion.mp3" controls>Your browser does not support the audio tag</audio><br>
