Reformat html files and add table examples

--- a/html-2/lecture/inline-level-vs-block-level.html
+++ b/html-2/lecture/inline-level-vs-block-level.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Example of inline-level and block-level HTML elements</title>
 </head>
+
 <body>
-    <p>Please use the <strong>Chrome extension Pesticide</strong>  to see the clear border of each HTML element.</p>
+    <p>Please use the <strong>Chrome extension Pesticide</strong> to see the clear border of each HTML element.</p>
     <h1>Example of inline-level and block-level HTML elements</h1>
     <h2>Here are Block Level Elements</h2>
     <p>p tag take up the entire width of their parent</p>
@@ -12,7 +14,9 @@
     <h1>h1 tag take up the entire width of their parent</h1>
     <h6>h6 tag take up the entire width of their parent</h6>
     <table>
-        <th><td>table head</td></th>
+        <th>
+        <td>table head</td>
+        </th>
         <tbody>
             <td>table data 1</td>
             <td>table data 2</td>
@@ -28,7 +32,9 @@
 
     <h2>Here are Inline Level Elements</h2>
     <span>Here are some text and a link <a href="www.google.com">Click Here!</a>.</span>
-    <span>Here are some text in another span tag then a image of a cat <img src="https://images2.imgbox.com/21/c4/7tn5e8lO_o.jpg" width="50px"> then some more text.</span>
+    <span>Here are some text in another span tag then a image of a cat <img
+            src="https://images2.imgbox.com/21/c4/7tn5e8lO_o.jpg" width="50px"> then some more text.</span>
     <span>Eventually more text at the end.</span>
 </body>
+
 </html>
