--- a/html-2/lecture/iframe-youtube.html
+++ b/html-2/lecture/iframe-youtube.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Example of iFrame element - Youtube</title>
 </head>
+
 <body>
 
     <h1>Video embeded with iFrame element</h1>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/N7UTS7en9uY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/N7UTS7en9uY" title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen></iframe>
 
-    
+
 </body>
+
 </html>
