Fix a few things

--- a/html-2/lecture/inline-level-vs-block-level.html
+++ b/html-2/lecture/inline-level-vs-block-level.html
@@ -13,16 +13,31 @@
     <div>div tag take up the entire width of their parent</div>
     <h1>h1 tag take up the entire width of their parent</h1>
     <h6>h6 tag take up the entire width of their parent</h6>
+
     <table>
-        <th>
-        <td>table head</td>
-        </th>
-        <tbody>
-            <td>table data 1</td>
-            <td>table data 2</td>
-            <td>table data 3</td>
-        </tbody>
+        <caption>
+            This table will take full width as well
+        </caption>
+        <thead>
+            <th>Countries</th>
+            <th>Capitals</th>
+            <th>Population</th>
+            <th>Language</th>
+        </thead>
+        <tr>
+            <td>USA</td>
+            <td>Washington, D.C.</td>
+            <td>309 million</td>
+            <td>English</td>
+        </tr>
+        <tr>
+            <td>Sweden</td>
+            <td>Stockholm</td>
+            <td>9 million</td>
+            <td>Swedish</td>
+        </tr>
     </table>
+    
     <ul>
         <li>my list item 1</li>
         <li>my list item 2</li>
