--- a/html-2/lecture/table.html
+++ b/html-2/lecture/table.html
@@ -3,6 +3,18 @@
 
 <head>
     <title>Example of video element</title>
+    <style>
+        table,
+            td {
+                border: 1px solid #333;
+            }
+        
+            thead,
+            tfoot {
+                background-color: #333;
+                color: #fff;
+            }
+        </style>        
 </head>
 
 <body>
@@ -21,6 +33,21 @@
             <td>Jane</td>
             <td>Doe</td>
         </tr>
+    </table>
+
+    <h3>Simple table with merged header colspan="2"</h3>
+    <table>
+        <thead>
+            <tr>
+                <th colspan="2">The table header</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>The table body</td>
+                <td>with two columns</td>
+            </tr>
+        </tbody>
     </table>
 
     <h3>Population Table with caption</h3>
