Push more examples of input form

--- a/html-2/lecture/form-text-password-hidden.html
+++ b/html-2/lecture/form-text-password-hidden.html
@@ -7,22 +7,24 @@
 </head>
 
 <body>
-    <h1>Types: text, password, hidden</h1>
-    <p><code>&lt;input type='<span>text</span>' name='<span>uid</span>' value='<span>s1234567</span>' /&gt;</code>
-    </p>
-    <p><input type="text" name="uid" value="s1234567"></p>
-    <p>
-        <code>&lt;input type='<span>password</span>' name='<span>uid</span>' value='<span>s1234567</span>' /&gt;</code>
-    </p>
-    <p><input type="password" name="uid" value="s1234567"></p>
-    <p>
-        <code>&lt;input type='<span>hidden</span>' name='<span>uid</span>' value='<span>s1234567</span>' /&gt;</code>
-    </p>
-    <p><input type="hidden" name="uid" value="s1234567"> ← <i>Nothing to see, but it is there! (Hidden input)</i></p>
+    <form action="app/form-processing" method="get">
+        
+        <h1>Types: text, password, hidden</h1>
+        <p><code>&lt;input type='<span>text</span>' name='<span>uid</span>' value='<span>s1234567</span>' /&gt;</code>
+        </p>
+        <p><input type="text" name="uid" value="s1234567"></p>
+        <p>
+            <code>&lt;input type='<span>password</span>' name='<span>uid</span>' value='<span>s1234567</span>' /&gt;</code>
+        </p>
+        <p><input type="password" name="uid" value="mypassword123"></p>
+        <p>
+            <code>&lt;input type='<span>hidden</span>' name='<span>uid</span>' value='<span>s1234567</span>' /&gt;</code>
+        </p>
+        <p><input type="hidden" name="uid" value="my-secret-value"> ← <i>Nothing to see, but it is there! (Hidden input)</i></p>
+
+        <button type="submit">Submit</button>
+    </form>
+    
 </body>
 
 </html>
-
-<input type="text" name="uid" value="s1234567">
-<input type="password" name="uid" value="s1234567">
-<input type="hidden" name="uid" value="s1234567">
