Fix the webpage titles and add one last example

--- a/html-2/lecture/form-button.html
+++ b/html-2/lecture/form-button.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Radio Input Example</title>
+    <title>Button Input Example</title>
 </head>
 
 <body>
@@ -26,6 +26,8 @@
             <img src='assets/image/panic-button.png' alt='Submit!'/><br>
             <strong>Submit Now!</strong>
         </button>
+
+        
     </form>
 
 
