--- a/html-2/lecture/form-fieldset-legend-label.html
+++ b/html-2/lecture/form-fieldset-legend-label.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Fieldset with radio</title>
+    <title>Fieldset, Legend and Label</title>
 </head>
 
 <body>
