--- a/html-2/lecture/form-select.html
+++ b/html-2/lecture/form-select.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Radio Input Example</title>
+    <title>Select Input Example</title>
 </head>
 
 <body>
