--- a/html-2/tutorial/rmit-store/index.html
+++ b/html-2/tutorial/rmit-store/index.html
@@ -11,39 +11,39 @@
 </head>
 
 <body>
-    <!--==========Main Header Section==========-->
-    <header>
-        <center>
+    <center>
+        <!--==========Main Header Section==========-->
+        <header>
+
             <a href="index.html">
                 <img src="assets/images/rmit-store-logo.png" width="300" alt="RMIT logo">
             </a>
             <nav>
                 <div>
-                    <span><a href="https://www.campusstore.rmit.edu.au/collections/clothing">Clothing</a></span>&nbsp;
-                    <span><a
-                            href="https://www.campusstore.rmit.edu.au/collections/accessories">Accessories</a></span>&nbsp;
-                    <span><a
-                            href="https://www.campusstore.rmit.edu.au/collections/stationery">Stationery</a></span>&nbsp;
-                    <span><a href="https://www.campusstore.rmit.edu.au/collections/course">Course</a></span>&nbsp;
-                    <span><a
-                            href="https://www.campusstore.rmit.edu.au/collections/special-collection">Special-Collection</a></span>&nbsp;
-                    <span><a href="https://www.campusstore.rmit.edu.au/collections/sale">Sale</a></span>&nbsp;
-                    <span><a href="#item-list">Buy Now!</a></span>&nbsp;
+                    <a href="https://www.campusstore.rmit.edu.au/collections/clothing"><strong>Clothing</strong></a>&nbsp;
+                    <a href="https://www.campusstore.rmit.edu.au/collections/accessories"><strong>Accessories</strong></a>&nbsp;
+                    <a href="https://www.campusstore.rmit.edu.au/collections/stationery"><strong>Stationery</strong></a>&nbsp;
+                    <a href="https://www.campusstore.rmit.edu.au/collections/course"><strong>Course</strong></a>&nbsp;
+                    <a href="https://www.campusstore.rmit.edu.au/collections/special-collection"><strong>Special-Collection</strong></a>&nbsp;
+                    <a href="https://www.campusstore.rmit.edu.au/collections/sale"><strong>Sale</strong></a>&nbsp;
+                    <a href="#item-list"><strong>Buy Now!</strong></a>&nbsp;
                 </div>
             </nav>
-        </center>
-    </header>
-    <!--==========Main Header Section==========-->
+        </header>
+        <!--==========Main Header Section==========-->
 
-    <!--==========Slider Section==========-->
-    <section>
-        <center><img src="assets/images/slider.jpg" width="970" alt="RMIT banner"></center>
-    </section>
-    <!--==========Slider Section==========-->
-    <main>
+        <!--==========Slider Section==========-->
+        <br>
         <section>
-            <center>
-                <h2>Our Store</h2>
+            <img src="assets/images/slider.jpg" width="970" alt="RMIT banner">
+        </section>
+        <!--==========Slider Section==========-->
+
+        <!--==========Main Section==========-->
+        <main>
+            <section>
+
+                <h2>Our Store 🛒</h2>
                 <div>
                     <table id="item-list">
                         <tr>
@@ -53,8 +53,8 @@
                                 </div>
                                 <div>
                                     <center>
-                                        <a href="product-order.html">Fairtrade Pocket Hoodie</a>
-                                        <p>64.95 AUD</p>
+                                        <a href="product-order.html"><h3>Fairtrade Pocket Hoodie</h3></a>
+                                        <p><strong>64.95 AUD</strong></p>
                                     </center>
                                 </div>
                             </td>
@@ -64,8 +64,8 @@
                                 </div>
                                 <div>
                                     <center>
-                                        <a href="product-order.html">Fairtrade Zip Hoodie</a>
-                                        <p>59.95 AUD</p>
+                                        <a href="product-order.html"><h3>Fairtrade Zip Hoodie</h3></a>
+                                        <p><strong>59.95 AUD</strong></p>
                                     </center>
                                 </div>
                             </td>
@@ -75,8 +75,8 @@
                                 </div>
                                 <div>
                                     <center>
-                                        <a href="product-order.html">Rudby Jergy</a>
-                                        <p>69.95 AUD</p>
+                                        <a href="product-order.html"><h3>Rudby Jergy</h3></a>
+                                        <p><strong>69.95 AUD</strong></p>
                                     </center>
                                 </div>
                             </td>
@@ -90,8 +90,8 @@
                                 </div>
                                 <div>
                                     <center>
-                                        <a href="product-order.html">Topaz Premium Zip Jacket</a>
-                                        <p>34.95 AUD</p>
+                                        <a href="product-order.html"><h3>Topaz Premium Zip Jacket</h3></a>
+                                        <p><strong>34.95 AUD</strong></p>
                                     </center>
                                 </div>
                             </td>
@@ -101,8 +101,8 @@
                                 </div>
                                 <div>
                                     <center>
-                                        <a href="product-order.html">Rmit Fairtrade Polo</a>
-                                        <p>21.95 AUD</p>
+                                        <a href="product-order.html"><h3>Rmit Fairtrade Polo</h3></a>
+                                        <p><strong>21.95 AUD</strong></p>
                                     </center>
                                 </div>
                             </td>
@@ -112,8 +112,8 @@
                                 </div>
                                 <div>
                                     <center>
-                                        <a href="product-order.html">Portable Charger</a>
-                                        <p>10 AUD</p>
+                                        <a href="product-order.html"><h3>Portable Charger</h3></a>
+                                        <p><strong>10 AUD</strong></p>
                                     </center>
                                 </div>
                             </td>
@@ -126,8 +126,8 @@
                                 </div>
                                 <div>
                                     <center>
-                                        <a href="product-order.html">Face Mask</a>
-                                        <p>8.5 AUD</p>
+                                        <a href="product-order.html"><h3>Face Mask</h3></a>
+                                        <p><strong>8.5 AUD</strong></p>
                                     </center>
                                 </div>
                             </td>
@@ -137,8 +137,8 @@
                                 </div>
                                 <div>
                                     <center>
-                                        <a href="product-order.html">Hoddie Koala</a>
-                                        <p>30 AUD</p>
+                                        <a href="product-order.html"><h3>Hoddie Koala</h3></a>
+                                        <p><strong>30 AUD</strong></p>
                                     </center>
                                 </div>
                             </td>
@@ -148,44 +148,8 @@
                                 </div>
                                 <div>
                                     <center>
-                                        <a href="product-order.html">Graduation Redbacks Pack</a>
-                                        <p>59.95 AUD</p>
-                                    </center>
-                                </div>
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td>
-                                <div>
-                                    <img src="assets/images/p-10.jpg" alt="">
-                                </div>
-                                <div>
-                                    <center>
-                                        <a href="product-order.html">Vinyl Pixel Keyring</a>
-                                        <p>7.95 AUD</p>
-                                    </center>
-                                </div>
-                            </td>
-                            <td>
-                                <div>
-                                    <img src="assets/images/p-11.jpg" alt="">
-                                </div>
-                                <div>
-                                    <center>
-                                        <a href="product-order.html">Applied Science Course Kit</a>
-                                        <p>79.95 AUD</p>
-                                    </center>
-                                </div>
-                            </td>
-                            <td>
-                                <div>
-                                    <img src="assets/images/p-12.jpg" alt="">
-                                </div>
-                                <div>
-                                    <center>
-                                        <a href="product-order.html">Graduation Tie</a>
-                                        <p>79.99 AUD</p>
+                                        <a href="product-order.html"><h3>Graduation Redbacks Pack</h3></a>
+                                        <p><strong>59.95 AUD</strong></p>
                                     </center>
                                 </div>
                             </td>
@@ -193,17 +157,46 @@
                     </table>
 
                 </div>
-            </center>
-        </section>
-    </main>
 
-    <!--==========Footer Area==========-->
-    <footer>
-        <center>
+            </section>
+            <section>
+                <table>
+                    <tr>
+                        <td>
+                            <center>
+                                <h2>Our Campus Video 🎥</h2>
+                                <iframe width="400" height="300" src="https://www.youtube.com/embed/N7UTS7en9uY"
+                                    title="YouTube video player" frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                    allowfullscreen></iframe>
+                            </center>
+                        </td>
+                        <td>
+                            <h2>🌟🏆🌟</h2>
+                        </td>
+                        <td>
+                            <center>
+                                <h2>Our Location 🗺️</h2>
+                                <iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1971.3870103991592!2d106.69219088711425!3d10.729450541237822!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752fbea5fe3db1%3A0xfae94aca5709003f!2sRMIT%20University%20Vietnam%20-%20Saigon%20South%20campus!5e0!3m2!1sen!2s!4v1678337072898!5m2!1sen!2s"
+                                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            </center>
+                        </td>
+                    </tr>
+                </table>
+            </section>
+        </main>
+        <!--==========Main Section==========-->
+
+        <!--==========Footer Area==========-->
+        <footer>
+
             <h4>© Copyright 2023 by Tom Huynh @ RMIT Vietnam | Made with ❤️</h4>
-        </center>
-    </footer>
-    <!--==========Footer Area==========-->
+
+        </footer>
+        <!--==========Footer Area==========-->
+    </center>
 </body>
 
 </html>
