--- a/html-2/tutorial/rmit-store/index.html
+++ b/html-2/tutorial/rmit-store/index.html
@@ -49,7 +49,7 @@
                         <tr>
                             <td>
                                 <div>
-                                    <img src="assets/images/p-1.jpg" alt="">
+                                    <img src="assets/images/p-1.jpg" alt="Fairtrade Pocket Hoodie">
                                 </div>
                                 <div>
                                     <center>
@@ -60,7 +60,7 @@
                             </td>
                             <td>
                                 <div>
-                                    <img src="assets/images/p-2.jpg" alt="">
+                                    <img src="assets/images/p-2.jpg" alt="Fairtrade Zip Hoodie">
                                 </div>
                                 <div>
                                     <center>
@@ -71,7 +71,7 @@
                             </td>
                             <td>
                                 <div>
-                                    <img src="assets/images/p-3.jpg" alt="">
+                                    <img src="assets/images/p-3.jpg" alt="Rudby Jergy">
                                 </div>
                                 <div>
                                     <center>
@@ -86,7 +86,7 @@
                         <tr>
                             <td>
                                 <div>
-                                    <img src="assets/images/p-4.jpg" alt="">
+                                    <img src="assets/images/p-4.jpg" alt="Topaz Premium Zip Jacket">
                                 </div>
                                 <div>
                                     <center>
@@ -97,7 +97,7 @@
                             </td>
                             <td>
                                 <div>
-                                    <img src="assets/images/p-5.jpg" alt="">
+                                    <img src="assets/images/p-5.jpg" alt="Rmit Fairtrade Polo">
                                 </div>
                                 <div>
                                     <center>
@@ -108,7 +108,7 @@
                             </td>
                             <td>
                                 <div>
-                                    <img src="assets/images/p-6.jpg" alt="">
+                                    <img src="assets/images/p-6.jpg" alt="Portable Charger">
                                 </div>
                                 <div>
                                     <center>
@@ -122,7 +122,7 @@
                         <tr>
                             <td>
                                 <div>
-                                    <img src="assets/images/p-7.jpg" alt="">
+                                    <img src="assets/images/p-7.jpg" alt="Face Mask">
                                 </div>
                                 <div>
                                     <center>
@@ -133,7 +133,7 @@
                             </td>
                             <td>
                                 <div>
-                                    <img src="assets/images/p-8.jpg" alt="">
+                                    <img src="assets/images/p-8.jpg" alt="Hoddie Koala">
                                 </div>
                                 <div>
                                     <center>
@@ -144,7 +144,7 @@
                             </td>
                             <td>
                                 <div>
-                                    <img src="assets/images/p-9.jpg" alt="">
+                                    <img src="assets/images/p-9.jpg" alt="Graduation Redbacks Pack">
                                 </div>
                                 <div>
                                     <center>
