--- a/html-2/tutorial/rmit-store/index.html
+++ b/html-2/tutorial/rmit-store/index.html
@@ -41,6 +41,8 @@
 
         <!--==========Main Section==========-->
         <main>
+
+            <!--==========First Section==========-->
             <section>
 
                 <h2>Our Store 🛒</h2>
@@ -155,10 +157,11 @@
                             </td>
                         </tr>
                     </table>
-
                 </div>
-
             </section>
+            <!--==========First Section==========-->
+
+            <!--==========Second Section==========-->
             <section>
                 <table>
                     <tr>
@@ -186,14 +189,13 @@
                     </tr>
                 </table>
             </section>
+            <!--==========Second Section==========-->
         </main>
         <!--==========Main Section==========-->
 
         <!--==========Footer Area==========-->
         <footer>
-
             <h4>© Copyright 2023 by Tom Huynh @ RMIT Vietnam | Made with ❤️</h4>
-
         </footer>
         <!--==========Footer Area==========-->
     </center>
