Add more examples for selectors

--- a/css-1/lecture/selectors/combinators/index.html
+++ b/css-1/lecture/selectors/combinators/index.html
@@ -12,21 +12,20 @@
     <h1>CSS Selectors - Combinators Example</h1>
 
     <p>In this example, we show examples of Type selector (A), Compound selector (A, B), Descendant combinator (A B),
-        Child combinator (A > B), Next-sibling combinator (A + B), Subsequent-sibling combinator (A ~ B).
-
-    </p>
+        Child combinator (A > B), Next-sibling combinator (A + B), Subsequent-sibling combinator (A ~ B).</p>
+        
     <div class="box1">
         <h1 class="target-1">Target 1</h1>
         <h1 class="target-2">Target 2</h1>
-        <p>Target 3</p>
-        <div class="box1-1">
-            <p>Target 4</p>
+        <p>Hi there!</p>
+        <div class="box1-inside">
+            <p>Target 3</p>
         </div>
     </div>
     <div class="box2">
-        <h3 class="target-4">Target 5</h3>
+        <h3 class="target-4">Target 4</h3>
+        <p>Target 5</p>
         <p>Target 6</p>
-        <p>Target 7</p>
     </div>
 </body>
 
