--- a/css-1/lecture/selectors/pseudo-element/index.html
+++ b/css-1/lecture/selectors/pseudo-element/index.html
@@ -13,17 +13,19 @@
 
     <p>In this example, we show examples of ::before, ::after, ::first-letter, ::first-line.</p>
 
-    <div class="box1">
-        <h1 class="target-1">Target 1</h1>
-        <h1 class="target-2">Target 2</h1>
-        <div class="box1-1">
-            <p>Target 3.<br>Target 3 New line<br>Target 3 New line</p>
-        </div>
-      </div>
-      <div class="box2">
-        <h3 class="target-4">Target 4<br>Target 4 New line<br>Target 4 New line</h3>
-        <p class="target-5">Target 5</p>
-      </div>      
+    <p>Learning resources for web developers can be found all over the internet. Try out <a href="https://web.dev/">web.dev</a>, <a href="https://www.w3schools.com/">w3schools.com</a> or our <a href="https://developer.mozilla.org/" class="local-link">MDN web docs</a>.</p>
+
+    <p class="boring-text">Here is some plain old boring text.</p>
+    <p>Here is some normal text that is neither boring nor exciting.</p>
+    <p class="exciting-text">Contributing to MDN is easy and fun.</p>
+
+    <p class="story">In warm ocean waters around the world, you may see a strange sight: A fish leaping from the water and soaring dozens of meters before returning to the ocean's depths. Early Mediterranean sailors thought these flying fish returned to the shore at night to sleep, and therefore called this family of marine fish Exocoetidae.</p>
+    
+    <p>Scientists exploring the depths of Monterey Bay unexpectedly encountered a rare and unique species of dragonfish. This species is the rarest of its species.</p>
+
+    <p>When Robison and a team of researchers discovered this fish, they were aboard a week-long expedition.</p>
+
+ 
 </body>
 
 </html>
