improve and fix bugs

--- a/css-1/lecture/business-card/index.html
+++ b/css-1/lecture/business-card/index.html
@@ -20,7 +20,7 @@
         <p>Lecturer of RMIT Vietnam</p>
         <div class="contact-box"><a href="mail:tom.huynh@rmit.edu.vn"><span class="icon">📧</span> tom.huynh@rmit.edu.vn</a></div>
         <div class="contact-box"><a href="tel:0912345678"><span class="icon">📞</span> 0912345678</a></div> 
-        <p>Hi everyone 👋! I am a web developer by day and data scientist by night.<br>I ❤️ caffè latte.</p>
+        <p>Hi everyone 👋<br> I am a web developer by day & data scientist by night<br>I ❤️ caffè latte</p>
       </div>
     </div>
   </body>
