--- a/css-1/lecture/selectors/combinators/index.html
+++ b/css-1/lecture/selectors/combinators/index.html
@@ -23,9 +23,11 @@
         </div>
     </div>
     <div class="box2">
+        <p>some text here 1</p>
+        <p>some text here 2</p>
         <h3 class="target-4">Target 4</h3>
-        <p>Target 5</p>
-        <p>Target 6</p>
+        <p>some text here 3</p>
+        <p>some text here 4</p>
     </div>
 </body>
 
