--- a/css-1/lecture/selectors/pseudo-class/index.html
+++ b/css-1/lecture/selectors/pseudo-class/index.html
@@ -22,9 +22,9 @@
 
     <h2>Focus</h2>
     <div>
-      Click or focus on this box to see style: <input id="selected" type="text" />
+      Click or focus on this box to see style: <input id="color-focus" type="text" />
       <br />
-      When focused this box has no styles: <input id="not-selected" type="text" /
+      When focused this box has no styles: <input type="text" /
     </div>
 
     <h2>Box 1</h2>
