Add the github link

--- a/css-1/lecture/business-card/rainbow/index.html
+++ b/css-1/lecture/business-card/rainbow/index.html
@@ -24,6 +24,6 @@
       </div>
     </div>
     
-    <a id="intro" href="https://mythrillfiction.com/" target="_blank">Business Card</a>
+    <a id="intro" href="https://github.com/TomHuynhSG" target="_blank">Business Card</a>
   </body>
 </html>
