polish exercises for css-1 tutorial

--- a/css-1/tutorial/exercise-1/index.html
+++ b/css-1/tutorial/exercise-1/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <!--DON'T TOUCH ANYTHING IN THIS FILE!-->
+    <!--YOU DON'T NEED TO TOUCH THE HTML!-->
     <h1>RMIT University Vietnam</h1>
     <h2>History</h2>
     <p>In 1998 RMIT in Australia was invited by the Vietnamese government to establish a fully foreign-owned university
