--- a/css-1/tutorial/exercise-2/index.html
+++ b/css-1/tutorial/exercise-2/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!--DON'T TOUCH ANYTHING IN THIS FILE!-->
+    <!--YOU DON'T NEED TO TOUCH THE HTML!-->
     <h1>RMIT Vietnam</h1>
 </body>
 </html>
