--- a/css-1/tutorial/exercise-3/index.html
+++ b/css-1/tutorial/exercise-3/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>RMIT Hipster Logo</title>
+    <title>Todo List</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!--DON'T TOUCH ANYTHING IN THIS FILE!-->
+    <!--YOU DON'T NEED TO TOUCH THE HTML!-->
     <h1>Todos</h1>
     <ul>
     <li class="done">Practice your ninja moves in the living room, but try not to break any furniture.</li>
