--- a/css-1/tutorial/exercise-4/index.html
+++ b/css-1/tutorial/exercise-4/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <!--DON'T TOUCH ANYTHING IN THIS FILE!-->
+    <!--YOU DON'T NEED TO TOUCH THE HTML!-->
     <div id="board">
       <div class="square"></div>
       <div class="square"></div>
