--- a/css-1/tutorial/exercise-4/index.html
+++ b/css-1/tutorial/exercise-4/index.html
@@ -1,67 +1,15 @@
-<!--DON'T TOUCH ANYTHING IN THIS FILE!-->
-<!doctype html>
-
+<!DOCTYPE html>
 <html>
 <head>
-
-  <title>Checkerboard</title>
-  <link rel="stylesheet" href="no_touching.css">
-  <link rel="stylesheet" href="styles.css">
-
+    <title>Cat Profile Photo</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
     <!--YOU DON'T NEED TO TOUCH THE HTML!-->
-    <div id="board">
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
+    <div class="card">
+        <img alt="" src="https://images2.imgbox.com/0e/b2/KMS3nzY1_o.png">
+        <h1>Hi, I'm a cat 😺</h1>
+        <p>Let's be friends 😊</p>
     </div>
 </body>
 </html>
