--- a/css-2/lecture/transition-timing-function/index.html
+++ b/css-2/lecture/transition-timing-function/index.html
@@ -10,27 +10,28 @@
 
 <body>
   <h1>The transition-timing-function Property.</h1>
-  <p>
+  <div class="container">
+    <p>
       This is an example for linear
-    value in transition-timing-function property.
-      <div id="div1">linear</div>
-  </p>
-  <p>
+      value in transition-timing-function property.
+    <div id="div1">linear</div>
+    </p>
+    <p>
       This is an example for ease
-    value in transition-timing-function property.
-      <div id="div2">ease</div>
-  </p>
-  <p>
+      value in transition-timing-function property.
+    <div id="div2">ease</div>
+    </p>
+    <p>
       This is an example for ease-in
-    value in transition-timing-function property
-      <div id="div3">ease-in</div>
-  </p>
-  <p>
+      value in transition-timing-function property
+    <div id="div3">ease-in</div>
+    </p>
+    <p>
       This is an example for ease-out
-    value in transition-timing-function property.
-      <div id="div4">ease-out</div>
-  </p>
-  
+      value in transition-timing-function property.
+    <div id="div4">ease-out</div>
+    </p>
+  </div>
 </body>
 
 </html>
