polish a few examples

--- a/css-2/lecture/transform/index.html
+++ b/css-2/lecture/transform/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div class="container"> Hover on Me!
+  <div class="container"> Hover to Race!
     <div class="rocket">
       🚀
     </div>
