--- a/css-2/lecture/transition/index.html
+++ b/css-2/lecture/transition/index.html
@@ -25,11 +25,11 @@
   </div>
 
   <p>Here is the example with transition. Try to hover and follow on these below boxes:</p>
-  <div class="many-box animation">
-    <div class="small-box"></div>
-    <div class="small-box"></div>
-    <div class="small-box"></div>
-    <div class="small-box"></div>
+  <div class="many-box">
+    <div class="small-box animation"></div>
+    <div class="small-box animation"></div>
+    <div class="small-box animation"></div>
+    <div class="small-box animation"></div>
   </div> 
   
 </body>
