polish an example

--- a/css-2/lecture/transition/index.html
+++ b/css-2/lecture/transition/index.html
@@ -10,13 +10,13 @@
 
 <body>
   <h1>Transition Examples</h1>
-  <p>Here is the example without transition. Try to hover on the box:</p>
+  <p>Here is the example <strong>without</strong> transition. Try to hover on the box:</p>
   <div class="box"></div>
 
-  <p>Here is the example with transition. Try to hover on the box:</p>
+  <p>Here is the example <strong>with</strong> transition. Try to hover on the box:</p>
   <div class="box animation"></div>
 
-  <p>Here is the example without transition. Try to hover and follow on these below boxes:</p>
+  <p>Here is the example <strong>without</strong> transition. Try to hover on these below boxes:</p>
   <div class="many-box">
     <div class="small-box"></div>
     <div class="small-box"></div>
@@ -24,7 +24,7 @@
     <div class="small-box"></div>
   </div>
 
-  <p>Here is the example with transition. Try to hover and follow on these below boxes:</p>
+  <p>Here is the example <strong>with</strong> transition. Try to hover on below boxes:</p>
   <div class="many-box">
     <div class="small-box animation"></div>
     <div class="small-box animation"></div>
